# Caches

./: CMakeLists.txt  README.md
cache_tests/: CMakeLists.txt
cache_tests/include/: generator.hpp
cache_tests/tests_for_compairing/: test05txt  test06.txt  test1.txt  test10.txt  test2.txt  test3.txt  test4.txt  test7.txt  test8.txt  test9.txt
comparison/: comparison.txt
lfu_cache/include/: lfu_cache.hpp
lfu_cache/src/: main.cpp
perfect_cache/include/: perfect_cache.hpp
perfect_cache/src/: main.cpp
tests/include/: generator.hpp
tests/src/: main.cpp
